ros2_ws/log/build_2024-09-05_12-11-03/teleop_pkg/stderr.log
  File "/home/k/ros2_ws/install/teleop_pkg/lib/python3.10/site-packages/teleop_pkg/teleop_node.py", line 31
    bool acceleration = False
         ^^^^^^^^^^^^
SyntaxError: invalid syntax

